# aula3D

./: .gitignore  Aula3D.csproj  Aula3D.sln  Aula3D.slnx  Instructions.md  Main.tscn  README.md
Aula3D.App/: Aula3D.App.csproj  project.godot
Aula3D.App/Cenas/: Main.tscn
Aula3D.App/Scripts/Controladores/: Objeto3D.cs  PainelAcademico.cs
Aula3D.Desktop/: Aula3D.Desktop.csproj  Program.cs
Aula3D.Desktop/Core/Interfaces/: IUdpReceiverService.cs
Aula3D.Desktop/UI/: Main.razor  _Imports.razor
Aula3D.Desktop/wwwroot/: index.html
Aula3D.TrackerService/: main.py  pyproject.toml
Aula3D.Training/: .gitignore  README.md  main.py  pyproject.toml
Aula3D.VisionConsole/: Program.cs  acuracia_matematica.csv  acuracia_neural.csv  estabilidade_lerp.csv  fps_hibrida.csv  fps_matematica.csv  fps_neural.csv
Aula3D.VisionCore/: Aula3D.VisionCore.csproj  GestorDeVisaoFacade.cs  HandTrackingResult.cs  modelo_mao.onnx
Aula3D.VisionCore/Interfaces/: IGestureProvider.cs
Aula3D.VisionCore/Processamento/: ClassificadorDeGestos.cs  FiltroFrequencial.cs  GestureClassifier.cs  SegmentadorNeural.cs
Aula3D.VisionCore/Utils/: PathResolver.cs
VisaoComputacionalTeste/: GestorDeVisaoFacade.cs  GestorDeVisaoFacade.cs.uid  HandProcessor.cs  HandProcessor.cs.uid  HandTrackingResult.cs  HandTrackingResult.cs.uid  INSTRUCOES.md  Program.cs  Program.cs.uid  VisaoComputacionalTeste.csproj  VisaoComputacionalTeste.sln
src/Camera/: CameraController.cs
src/Core/: ControladorDeVisao.cs  ControladorDeVisao.cs.uid  GameManager.cs  ModelManager.cs
src/UI/: UIManager.cs
(+4 files in other folders)
