[project]
name = "aula3d-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "onnx>=1.21.0",
    "opencv-python>=4.13.0.92",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
